Enable JPMS
None of the dependencies are modular, and three of them have missing
dependencies. The only option is to build tqrespec and tqdatabase as
modules, keeping all the deps in classpath.